Fix headers having justify alignment
Only really visible for long headers (that become multiline) on small screens.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -113,6 +113,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
+    text-align: left;
 }
 
 
